# attach_shelf

./: CMakeLists.txt  package.xml
launch/: attach_to_shelf.launch.py  pre_approach.launch.xml
rviz/: attach_to_shelf.rviz  pre_approach.rviz
src/: approach_service_server.cpp  pre_approach.cpp  pre_approach_v2.cpp
